test/sema/negative/if01.impala
fn f() -> () {
    let x: int = if (true) {
        return()
    } else {
        return()
    };
}
