test/sema/negative/if01.out
if01.impala:2 col 18 - 6 col 5: error: mismatched types: expected 'i32' but found '<no-return>' as initialization type
